# audio_generation

./: .gitignore  .json  CMakeLists.txt  Generate.ipynb  Makefile  README.md  asdf.json  generate_audio.py  issue_resolution.md  main.py  note_structure.py  pyaudio_test.py  requirements.txt  waveforms.py
.ipynb_checkpoints/: Generate-checkpoint.ipynb
audio/: 44100.wav.reapeaks  A440_Sine.wav.reapeaks  Gas Valve Buzz.m4a  brush_rim.wav.reapeaks  cymbal.wav.reapeaks  decay.wav.reapeaks  deep_clunk.wav.reapeaks  descend.wav.reapeaks  faded.wav.reapeaks  gavel.wav.reapeaks  heavy_kick.wav.reapeaks  hemorrhage.wav.reapeaks  laser_collision.wav.reapeaks  ride.wav.reapeaks  rim_crack.wav.reapeaks  sawtooth.wav.reapeaks  shitty_buzzer.wav.reapeaks  square.wav.reapeaks  stereo.wav.reapeaks  tri.wav.reapeaks  waveform.wav.reapeaks  wood_collision.wav.reapeaks  young_laser.wav.reapeaks
audio/graphed/: calm_form.json
audio/ir/: Kitchen clap.m4a
data/: cmc_id_list.json  coingecko_id_list.json  kraken_pairs_list.json
docs/: dolatex  equations.tex
meta/requirements/use-cases/: additive-syntheizer.txt  audio_sampling.txt  mixer.txt  sequencer.txt
src/: CMakeLists.txt  Makefile  Sampler  Sampler.cpp  SoundPlayer.py  WaveGrapher.py  a.out  action_monitor.py  airwave_collision.py  anim_example.py  eigen_test.cpp  generate_audio.py  grapher.py  instrument.py  main.py  note_structure.py  resample.py  util.py  utilities.py  wave_app_model.py  wave_controller.py  wave_model.py  waveform.py
tests/: test_soundfile.py
web/: app1.js  index.html  index1.html  styles1.css
